Add route to download data contracts
This commit will add a route for downloading data contracts.
